src/main/java/antlr/WhileGrammarParser.java
// $ANTLR 3.5.3 WhileGrammar.g 2025-01-23 20:09:36
 package antlr; 

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class WhileGrammarParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGNMENT", "COMMANDS", "COMMENT", 
		"DEC", "DEFINITION", "EXPRESSION", "EXPRESSIONS", "EXPR_CALL", "EXPR_CHILD", 
		"EXPR_COMPARE", "EXPR_CONSTRUCTOR", "EXPR_CONSTRUCTOR_CONS", "EXPR_CONSTRUCTOR_LIST", 
		"EXPR_HEAD", "EXPR_NIL", "EXPR_PRIMITIVE", "EXPR_SYMBOL", "EXPR_TAIL", 
		"EXPR_VARIABLE", "FOR", "FOREACH", "FUNCTION", "IF", "INPUT", "INPUT_STUB", 
		"MAJ", "MIN", "NOP", "OUTPUT", "PROGRAM", "SYMBOL", "VARIABLE", "VARIABLES", 
		"WHILE", "WS", "'%'", "'('", "')'", "','", "':'", "':='", "';'", "'=?'", 
		"'cons'", "'do'", "'else'", "'fi'", "'for'", "'foreach'", "'function'", 
		"'hd'", "'if'", "'in'", "'list'", "'nil'", "'nop'", "'od'", "'read'", 
		"'then'", "'tl'", "'while'", "'write'"
	};
	public static final int EOF=-1;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int ASSIGNMENT=4;
	public static final int COMMANDS=5;
	public static final int COMMENT=6;
	public static final int DEC=7;
	public static final int DEFINITION=8;
	public static final int EXPRESSION=9;
	public static final int EXPRESSIONS=10;
	public static final int EXPR_CALL=11;
	public static final int EXPR_CHILD=12;
	public static final int EXPR_COMPARE=13;
	public static final int EXPR_CONSTRUCTOR=14;
	public static final int EXPR_CONSTRUCTOR_CONS=15;
	public static final int EXPR_CONSTRUCTOR_LIST=16;
	public static final int EXPR_HEAD=17;
	public static final int EXPR_NIL=18;
	public static final int EXPR_PRIMITIVE=19;
	public static final int EXPR_SYMBOL=20;
	public static final int EXPR_TAIL=21;
	public static final int EXPR_VARIABLE=22;
	public static final int FOR=23;
	public static final int FOREACH=24;
	public static final int FUNCTION=25;
	public static final int IF=26;
	public static final int INPUT=27;
	public static final int INPUT_STUB=28;
	public static final int MAJ=29;
	public static final int MIN=30;
	public static final int NOP=31;
	public static final int OUTPUT=32;
	public static final int PROGRAM=33;
	public static final int SYMBOL=34;
	public static final int VARIABLE=35;
	public static final int VARIABLES=36;
	public static final int WHILE=37;
	public static final int WS=38;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public WhileGrammarParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public WhileGrammarParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return WhileGrammarParser.tokenNames; }
	@Override public String getGrammarFileName() { return "WhileGrammar.g"; }


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// WhileGrammar.g:58:1: program : ( function )* -> ^( PROGRAM ( function )* ) ;
	public final WhileGrammarParser.program_return program() throws RecognitionException {
		WhileGrammarParser.program_return retval = new WhileGrammarParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope function1 =null;

		RewriteRuleSubtreeStream stream_function=new RewriteRuleSubtreeStream(adaptor,"rule function");

		try {
			// WhileGrammar.g:58:8: ( ( function )* -> ^( PROGRAM ( function )* ) )
			// WhileGrammar.g:58:10: ( function )*
			{
			// WhileGrammar.g:58:10: ( function )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==53) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// WhileGrammar.g:58:10: function
					{
					pushFollow(FOLLOW_function_in_program429);
					function1=function();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_function.add(function1.getTree());
					}
					break;

				default :
					break loop1;
				}
			}


			// AST REWRITE
			// elements: function
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 58:20: -> ^( PROGRAM ( function )* )
			{
				// WhileGrammar.g:58:23: ^( PROGRAM ( function )* )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROGRAM, "PROGRAM"), root_1);
				// WhileGrammar.g:58:33: ( function )*
				while ( stream_function.hasNext() ) {
					adaptor.addChild(root_1, stream_function.nextTree());
				}
				stream_function.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class function_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "function"
	// WhileGrammar.g:60:1: function : 'function' SYMBOL ':' definition -> ^( FUNCTION SYMBOL definition ) ;
	public final WhileGrammarParser.function_return function() throws RecognitionException {
		WhileGrammarParser.function_return retval = new WhileGrammarParser.function_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal2=null;
		Token SYMBOL3=null;
		Token char_literal4=null;
		ParserRuleReturnScope definition5 =null;

		Object string_literal2_tree=null;
		Object SYMBOL3_tree=null;
		Object char_literal4_tree=null;
		RewriteRuleTokenStream stream_SYMBOL=new RewriteRuleTokenStream(adaptor,"token SYMBOL");
		RewriteRuleTokenStream stream_53=new RewriteRuleTokenStream(adaptor,"token 53");
		RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");
		RewriteRuleSubtreeStream stream_definition=new RewriteRuleSubtreeStream(adaptor,"rule definition");

		try {
			// WhileGrammar.g:60:9: ( 'function' SYMBOL ':' definition -> ^( FUNCTION SYMBOL definition ) )
			// WhileGrammar.g:60:11: 'function' SYMBOL ':' definition
			{
			string_literal2=(Token)match(input,53,FOLLOW_53_in_function446); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_53.add(string_literal2);

			SYMBOL3=(Token)match(input,SYMBOL,FOLLOW_SYMBOL_in_function448); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_SYMBOL.add(SYMBOL3);

			char_literal4=(Token)match(input,43,FOLLOW_43_in_function450); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_43.add(char_literal4);

			pushFollow(FOLLOW_definition_in_function452);
			definition5=definition();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_definition.add(definition5.getTree());

			// AST REWRITE
			// elements: definition, SYMBOL
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 60:44: -> ^( FUNCTION SYMBOL definition )
			{
				// WhileGrammar.g:60:47: ^( FUNCTION SYMBOL definition )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(FUNCTION, "FUNCTION"), root_1);
				adaptor.addChild(root_1, stream_SYMBOL.nextNode());
				adaptor.addChild(root_1, stream_definition.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "function"


	public static class definition_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "definition"
	// WhileGrammar.g:61:1: definition : 'read' (i= io )? '%' c= commands '%' 'write' o= io -> ^( INPUT ( $i)? ) ^( OUTPUT $o) $c;
	public final WhileGrammarParser.definition_return definition() throws RecognitionException {
		WhileGrammarParser.definition_return retval = new WhileGrammarParser.definition_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal6=null;
		Token char_literal7=null;
		Token char_literal8=null;
		Token string_literal9=null;
		ParserRuleReturnScope i =null;
		ParserRuleReturnScope c =null;
		ParserRuleReturnScope o =null;

		Object string_literal6_tree=null;
		Object char_literal7_tree=null;
		Object char_literal8_tree=null;
		Object string_literal9_tree=null;
		RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
		RewriteRuleTokenStream stream_61=new RewriteRuleTokenStream(adaptor,"token 61");
		RewriteRuleTokenStream stream_65=new RewriteRuleTokenStream(adaptor,"token 65");
		RewriteRuleSubtreeStream stream_io=new RewriteRuleSubtreeStream(adaptor,"rule io");
		RewriteRuleSubtreeStream stream_commands=new RewriteRuleSubtreeStream(adaptor,"rule commands");

		try {
			// WhileGrammar.g:61:11: ( 'read' (i= io )? '%' c= commands '%' 'write' o= io -> ^( INPUT ( $i)? ) ^( OUTPUT $o) $c)
			// WhileGrammar.g:61:13: 'read' (i= io )? '%' c= commands '%' 'write' o= io
			{
			string_literal6=(Token)match(input,61,FOLLOW_61_in_definition468); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_61.add(string_literal6);

			// WhileGrammar.g:61:21: (i= io )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==VARIABLE) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// WhileGrammar.g:61:21: i= io
					{
					pushFollow(FOLLOW_io_in_definition472);
					i=io();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_io.add(i.getTree());
					}
					break;

			}

			char_literal7=(Token)match(input,39,FOLLOW_39_in_definition475); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_39.add(char_literal7);

			pushFollow(FOLLOW_commands_in_definition479);
			c=commands();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_commands.add(c.getTree());
			char_literal8=(Token)match(input,39,FOLLOW_39_in_definition481); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_39.add(char_literal8);

			string_literal9=(Token)match(input,65,FOLLOW_65_in_definition483); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_65.add(string_literal9);

			pushFollow(FOLLOW_io_in_definition487);
			o=io();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_io.add(o.getTree());

			// AST REWRITE
			// elements: c, o, i
			// token labels: 
			// rule labels: c, i, retval, o
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_c=new RewriteRuleSubtreeStream(adaptor,"rule c",c!=null?c.getTree():null);
			RewriteRuleSubtreeStream stream_i=new RewriteRuleSubtreeStream(adaptor,"rule i",i!=null?i.getTree():null);
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);
			RewriteRuleSubtreeStream stream_o=new RewriteRuleSubtreeStream(adaptor,"rule o",o!=null?o.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 61:58: -> ^( INPUT ( $i)? ) ^( OUTPUT $o) $c
			{
				// WhileGrammar.g:61:61: ^( INPUT ( $i)? )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(INPUT, "INPUT"), root_1);
				// WhileGrammar.g:61:70: ( $i)?
				if ( stream_i.hasNext() ) {
					adaptor.addChild(root_1, stream_i.nextTree());
				}
				stream_i.reset();

				adaptor.addChild(root_0, root_1);
				}

				// WhileGrammar.g:61:74: ^( OUTPUT $o)
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(OUTPUT, "OUTPUT"), root_1);
				adaptor.addChild(root_1, stream_o.nextTree());
				adaptor.addChild(root_0, root_1);
				}

				adaptor.addChild(root_0, stream_c.nextTree());
			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "definition"


	public static class io_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "io"
	// WhileGrammar.g:62:1: io : VARIABLE ( ',' VARIABLE )* -> ( VARIABLE )* ;
	public final WhileGrammarParser.io_return io() throws RecognitionException {
		WhileGrammarParser.io_return retval = new WhileGrammarParser.io_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token VARIABLE10=null;
		Token char_literal11=null;
		Token VARIABLE12=null;

		Object VARIABLE10_tree=null;
		Object char_literal11_tree=null;
		Object VARIABLE12_tree=null;
		RewriteRuleTokenStream stream_VARIABLE=new RewriteRuleTokenStream(adaptor,"token VARIABLE");
		RewriteRuleTokenStream stream_42=new RewriteRuleTokenStream(adaptor,"token 42");

		try {
			// WhileGrammar.g:62:3: ( VARIABLE ( ',' VARIABLE )* -> ( VARIABLE )* )
			// WhileGrammar.g:62:5: VARIABLE ( ',' VARIABLE )*
			{
			VARIABLE10=(Token)match(input,VARIABLE,FOLLOW_VARIABLE_in_io513); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_VARIABLE.add(VARIABLE10);

			// WhileGrammar.g:62:14: ( ',' VARIABLE )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==42) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// WhileGrammar.g:62:15: ',' VARIABLE
					{
					char_literal11=(Token)match(input,42,FOLLOW_42_in_io516); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_42.add(char_literal11);

					VARIABLE12=(Token)match(input,VARIABLE,FOLLOW_VARIABLE_in_io518); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_VARIABLE.add(VARIABLE12);

					}
					break;

				default :
					break loop3;
				}
			}


			// AST REWRITE
			// elements: VARIABLE
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 62:30: -> ( VARIABLE )*
			{
				// WhileGrammar.g:62:33: ( VARIABLE )*
				while ( stream_VARIABLE.hasNext() ) {
					adaptor.addChild(root_0, stream_VARIABLE.nextNode());
				}
				stream_VARIABLE.reset();

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "io"


	public static class vars_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "vars"
	// WhileGrammar.g:64:1: vars : v= VARIABLE ( ',' var= VARIABLE )* -> ^( VARIABLES $v ( $var)? ) ;
	public final WhileGrammarParser.vars_return vars() throws RecognitionException {
		WhileGrammarParser.vars_return retval = new WhileGrammarParser.vars_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token v=null;
		Token var=null;
		Token char_literal13=null;

		Object v_tree=null;
		Object var_tree=null;
		Object char_literal13_tree=null;
		RewriteRuleTokenStream stream_VARIABLE=new RewriteRuleTokenStream(adaptor,"token VARIABLE");
		RewriteRuleTokenStream stream_42=new RewriteRuleTokenStream(adaptor,"token 42");

		try {
			// WhileGrammar.g:64:5: (v= VARIABLE ( ',' var= VARIABLE )* -> ^( VARIABLES $v ( $var)? ) )
			// WhileGrammar.g:64:7: v= VARIABLE ( ',' var= VARIABLE )*
			{
			v=(Token)match(input,VARIABLE,FOLLOW_VARIABLE_in_vars534); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_VARIABLE.add(v);

			// WhileGrammar.g:64:18: ( ',' var= VARIABLE )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==42) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// WhileGrammar.g:64:19: ',' var= VARIABLE
					{
					char_literal13=(Token)match(input,42,FOLLOW_42_in_vars537); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_42.add(char_literal13);

					var=(Token)match(input,VARIABLE,FOLLOW_VARIABLE_in_vars541); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_VARIABLE.add(var);

					}
					break;

				default :
					break loop4;
				}
			}


			// AST REWRITE
			// elements: v, var
			// token labels: v, var
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleTokenStream stream_v=new RewriteRuleTokenStream(adaptor,"token v",v);
			RewriteRuleTokenStream stream_var=new RewriteRuleTokenStream(adaptor,"token var",var);
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 64:38: -> ^( VARIABLES $v ( $var)? )
			{
				// WhileGrammar.g:64:41: ^( VARIABLES $v ( $var)? )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(VARIABLES, "VARIABLES"), root_1);
				adaptor.addChild(root_1, stream_v.nextNode());
				// WhileGrammar.g:64:57: ( $var)?
				if ( stream_var.hasNext() ) {
					adaptor.addChild(root_1, stream_var.nextNode());
				}
				stream_var.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "vars"


	public static class commands_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "commands"
	// WhileGrammar.g:66:1: commands : command ( ';' command )* -> ^( COMMANDS ( command )* ) ;
	public final WhileGrammarParser.commands_return commands() throws RecognitionException {
		WhileGrammarParser.commands_return retval = new WhileGrammarParser.commands_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal15=null;
		ParserRuleReturnScope command14 =null;
		ParserRuleReturnScope command16 =null;

		Object char_literal15_tree=null;
		RewriteRuleTokenStream stream_45=new RewriteRuleTokenStream(adaptor,"token 45");
		RewriteRuleSubtreeStream stream_command=new RewriteRuleSubtreeStream(adaptor,"rule command");

		try {
			// WhileGrammar.g:66:9: ( command ( ';' command )* -> ^( COMMANDS ( command )* ) )
			// WhileGrammar.g:66:11: command ( ';' command )*
			{
			pushFollow(FOLLOW_command_in_commands563);
			command14=command();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_command.add(command14.getTree());
			// WhileGrammar.g:66:19: ( ';' command )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==45) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// WhileGrammar.g:66:20: ';' command
					{
					char_literal15=(Token)match(input,45,FOLLOW_45_in_commands566); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_45.add(char_literal15);

					pushFollow(FOLLOW_command_in_commands568);
					command16=command();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_command.add(command16.getTree());
					}
					break;

				default :
					break loop5;
				}
			}


			// AST REWRITE
			// elements: command
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 67:5: -> ^( COMMANDS ( command )* )
			{
				// WhileGrammar.g:67:8: ^( COMMANDS ( command )* )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(COMMANDS, "COMMANDS"), root_1);
				// WhileGrammar.g:67:19: ( command )*
				while ( stream_command.hasNext() ) {
					adaptor.addChild(root_1, stream_command.nextTree());
				}
				stream_command.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "commands"


	public static class command_if_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "command_if"
	// WhileGrammar.g:70:1: command_if : 'if' expression 'then' b1= commands ( 'else' b2= commands )? 'fi' -> ^( IF expression $b1 ( $b2)? ) ;
	public final WhileGrammarParser.command_if_return command_if() throws RecognitionException {
		WhileGrammarParser.command_if_return retval = new WhileGrammarParser.command_if_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal17=null;
		Token string_literal19=null;
		Token string_literal20=null;
		Token string_literal21=null;
		ParserRuleReturnScope b1 =null;
		ParserRuleReturnScope b2 =null;
		ParserRuleReturnScope expression18 =null;

		Object string_literal17_tree=null;
		Object string_literal19_tree=null;
		Object string_literal20_tree=null;
		Object string_literal21_tree=null;
		RewriteRuleTokenStream stream_55=new RewriteRuleTokenStream(adaptor,"token 55");
		RewriteRuleTokenStream stream_49=new RewriteRuleTokenStream(adaptor,"token 49");
		RewriteRuleTokenStream stream_50=new RewriteRuleTokenStream(adaptor,"token 50");
		RewriteRuleTokenStream stream_62=new RewriteRuleTokenStream(adaptor,"token 62");
		RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
		RewriteRuleSubtreeStream stream_commands=new RewriteRuleSubtreeStream(adaptor,"rule commands");

		try {
			// WhileGrammar.g:70:11: ( 'if' expression 'then' b1= commands ( 'else' b2= commands )? 'fi' -> ^( IF expression $b1 ( $b2)? ) )
			// WhileGrammar.g:70:13: 'if' expression 'then' b1= commands ( 'else' b2= commands )? 'fi'
			{
			string_literal17=(Token)match(input,55,FOLLOW_55_in_command_if591); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_55.add(string_literal17);

			pushFollow(FOLLOW_expression_in_command_if593);
			expression18=expression();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_expression.add(expression18.getTree());
			string_literal19=(Token)match(input,62,FOLLOW_62_in_command_if595); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_62.add(string_literal19);

			pushFollow(FOLLOW_commands_in_command_if599);
			b1=commands();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_commands.add(b1.getTree());
			// WhileGrammar.g:70:48: ( 'else' b2= commands )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==49) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					// WhileGrammar.g:70:49: 'else' b2= commands
					{
					string_literal20=(Token)match(input,49,FOLLOW_49_in_command_if602); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_49.add(string_literal20);
